--- a/calcolo_parallelo_su_un_vettore_condiviso/.test/processi-prod-cons.yml
+++ b/calcolo_parallelo_su_un_vettore_condiviso/.test/processi-prod-cons.yml
@@ -82,15 +82,18 @@ rules:
       - pattern-not: |
           void padre(...){
             ...
-            for(int i = 0; i < NUM_PROCESSI; i++) {
+            for(int i = 0; i < $NUM_PROCESSI; i++) {
               ...
               Wait_Sem(...);
+              ...
               if( *buffer < minimo ) {
                 ...
                 minimo = *buffer;
                 ...
               }
+              ...
               Signal_Sem(...);
+              ...
             }
             ...
           }
