--- a/lettori-scrittori_con_semafori_su_una_coppia_di_valori_condivisa/.test/buffer.yml
+++ b/lettori-scrittori_con_semafori_su_una_coppia_di_valori_condivisa/.test/buffer.yml
@@ -16,11 +16,10 @@ rules:
             ...
             $NUM_LETTORI++;
             ...
-            if($NUM_LETTORI == 1){
+            if($NUM_LETTORI == 1)
               ...
               Wait_Sem(...,$SYNCH);
               ...
-            }
             ...
             Signal_Sem(...,$MUTEXL);
             ...
@@ -28,15 +27,43 @@ rules:
             ...
             $NUM_LETTORI--;
             ...
-            if($NUM_LETTORI == 0){
+            if($NUM_LETTORI == 0)
               ...
               Signal_Sem(...,$SYNCH);
               ...
-            }
             ...
             Signal_Sem(...,$MUTEXL);
             ...
           }
+
+
+      - pattern-not: |
+          void leggi_buffer(...){
+            ...
+            Wait_Sem(...,$MUTEXL);
+            ...
+            $NUM_LETTORI = $NUM_LETTORI + 1;
+            ...
+            if($NUM_LETTORI == 1)
+              ...
+              Wait_Sem(...,$SYNCH);
+              ...
+            ...
+            Signal_Sem(...,$MUTEXL);
+            ...
+            Wait_Sem(...,$MUTEXL);
+            ...
+            $NUM_LETTORI = $NUM_LETTORI - 1;
+            ...
+            if($NUM_LETTORI == 0)
+              ...
+              Signal_Sem(...,$SYNCH);
+              ...
+            ...
+            Signal_Sem(...,$MUTEXL);
+            ...
+          }
+
 
   - id: scrittori-algoritmo-non-corretto
     languages:
