check num_lettori e num_scrittori

--- a/lettori-scrittori_con_semafori_su_una_coppia_di_valori_condivisa/.test/buffer.yml
+++ b/lettori-scrittori_con_semafori_su_una_coppia_di_valori_condivisa/.test/buffer.yml
@@ -35,8 +35,6 @@ rules:
             Signal_Sem(...,$MUTEXL);
             ...
           }
-
-
       - pattern-not: |
           void leggi_buffer(...){
             ...
@@ -63,6 +61,63 @@ rules:
             Signal_Sem(...,$MUTEXL);
             ...
           }
+      - pattern-not: |
+          void leggi_buffer(...){
+            ...
+            Wait_Sem(...,$MUTEXL);
+            ...
+            $NUM_LETTORI++;
+            ...
+            if($NUM_LETTORI == 1){
+              ...
+              Wait_Sem(...,$SYNCH);
+              ...
+            }
+            ...
+            Signal_Sem(...,$MUTEXL);
+            ...
+            Wait_Sem(...,$MUTEXL);
+            ...
+            $NUM_LETTORI--;
+            ...
+            if($NUM_LETTORI == 0){
+              ...
+              Signal_Sem(...,$SYNCH);
+              ...
+            }
+            ...
+            Signal_Sem(...,$MUTEXL);
+            ...
+          }
+      - pattern-not: |
+          void leggi_buffer(...){
+            ...
+            Wait_Sem(...,$MUTEXL);
+            ...
+            $NUM_LETTORI = $NUM_LETTORI + 1;
+            ...
+            if($NUM_LETTORI == 1){
+              ...
+              Wait_Sem(...,$SYNCH);
+              ...
+            }
+            ...
+            Signal_Sem(...,$MUTEXL);
+            ...
+            Wait_Sem(...,$MUTEXL);
+            ...
+            $NUM_LETTORI = $NUM_LETTORI - 1;
+            ...
+            if($NUM_LETTORI == 0){
+              ...
+              Signal_Sem(...,$SYNCH);
+              ...
+            }
+            ...
+            Signal_Sem(...,$MUTEXL);
+            ...
+          }
+
 
 
   - id: scrittori-algoritmo-non-corretto
